--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,3 +1,7 @@
 @use "./base.scss";
 
 // put your custom CSS here!
+li.section-li > .section {
+    grid-template-columns: auto auto;
+    display: grid;
+}
