--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -2,6 +2,6 @@
 
 // put your custom CSS here!
 li.section-li > .section {
-    grid-template-columns: auto auto;
+    grid-template-columns: 200px auto;
     display: grid;
 }
